; ModuleID = '/home/carl/AnghaBench/darwin-xnu/san/extr_kasan-memintrinsics.c___asan_strlcpy.c'
source_filename = "/home/carl/AnghaBench/darwin-xnu/san/extr_kasan-memintrinsics.c___asan_strlcpy.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

@TYPE_STRW = common dso_local global i32 0, align 4

; Function Attrs: noinline nounwind optnone uwtable
define dso_local i64 @__asan_strlcpy(i8* %0, i8* %1, i64 %2) #0 {
  %4 = alloca i8*, align 8
  %5 = alloca i8*, align 8
  %6 = alloca i64, align 8
  store i8* %0, i8** %4, align 8
  store i8* %1, i8** %5, align 8
  store i64 %2, i64* %6, align 8
  %7 = load i8*, i8** %4, align 8
  %8 = load i64, i64* %6, align 8
  %9 = load i32, i32* @TYPE_STRW, align 4
  %10 = call i32 @kasan_check_range(i8* %7, i64 %8, i32 %9)
  %11 = load i8*, i8** %4, align 8
  %12 = load i8*, i8** %5, align 8
  %13 = load i64, i64* %6, align 8
  %14 = call i64 @__nosan_strlcpy(i8* %11, i8* %12, i64 %13)
  ret i64 %14
}

declare dso_local i32 @kasan_check_range(i8*, i64, i32) #1

declare dso_local i64 @__nosan_strlcpy(i8*, i8*, i64) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
